<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_ingreso"
    android:background="@drawable/background_bacan">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="305dp"
        android:layout_height="222dp"
        android:layout_marginTop="80dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/estres" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@color/burnt_sienna"
        android:textColor="@color/white"
        android:text="@string/espera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/cedula"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/AggCedula"
        android:textColor="@color/black"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/Agregar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="55dp"
        android:text="@string/Agregar"
        android:background="@drawable/botones"
        android:textColor="@color/white"
        android:onClick="Agregar"
        app:layout_constraintEnd_toStartOf="@+id/Turnos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cedula" />

    <Button
        android:id="@+id/Turnos"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/botones"
        android:onClick="verTurnos"
        android:text="@string/Turnos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Agregar"
        app:layout_constraintTop_toBottomOf="@+id/cedula" />

    <Button
        android:id="@+id/Lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/botones"
        android:onClick="verListaTurnos"
        android:text="@string/Lista"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Agregar" />
</androidx.constraintlayout.widget.ConstraintLayout>