<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Turnos"
    android:background="@drawable/background_bacan"
    >

    <TextView
        android:id="@+id/nTurnoAnterior"
        android:layout_width="118dp"
        android:layout_height="78dp"
        android:layout_marginTop="38dp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/nTurnoSig"
        android:layout_width="118dp"
        android:layout_height="78dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toEndOf="@+id/nTurno"
        app:layout_constraintTop_toBottomOf="@+id/turnoSig" />

    <TextView
        android:id="@+id/nTurno"
        android:layout_width="118dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="104dp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/nTurnoSig"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turno" />

    <TextView
        android:id="@+id/turnoSig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/turnoSig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/turno"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="135dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/turno"
        app:layout_constraintEnd_toStartOf="@+id/turnoSig"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/botones"
        android:onClick="aTurnos"
        android:text="@string/Turnos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nTurnoSig" />

    <Button
        android:id="@+id/sig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="129dp"
        android:background="@drawable/botones"
        android:onClick="siguienteTurno"
        android:text="@string/sig"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nTurno" />

    <Button
        android:id="@+id/NuevoTurno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:background="@drawable/botones"
        android:onClick="AggTurno"
        android:text="@string/AggNuevo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:text="@string/turnoAnt"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>